core/src/parser/assembly/snapshots/vicis_core__parser__assembly__module__parse_example_manyargs.snap
---
source: core/src/parser/assembly/module.rs
assertion_line: 162
expression: module

---
source_filename = "c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"


define external dso_local default i32 @f(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
7:
    %8 = alloca i32, i32 1, align 4
    %9 = alloca i32, i32 1, align 4
    %10 = alloca i32, i32 1, align 4
    %11 = alloca i32, i32 1, align 4
    %12 = alloca i32, i32 1, align 4
    %13 = alloca i32, i32 1, align 4
    %14 = alloca i32, i32 1, align 4
    store i32 %0, i32* %8, align 4
    store i32 %1, i32* %9, align 4
    store i32 %2, i32* %10, align 4
    store i32 %3, i32* %11, align 4
    store i32 %4, i32* %12, align 4
    store i32 %5, i32* %13, align 4
    store i32 %6, i32* %14, align 4
    %15 = load i32, i32* %8, align 4
    %16 = load i32, i32* %9, align 4
    %17 = add nsw i32 %15, %16
    %18 = load i32, i32* %10, align 4
    %19 = add nsw i32 %17, %18
    %20 = load i32, i32* %11, align 4
    %21 = add nsw i32 %19, %20
    %22 = load i32, i32* %12, align 4
    %23 = add nsw i32 %21, %22
    %24 = load i32, i32* %13, align 4
    %25 = add nsw i32 %23, %24
    %26 = load i32, i32* %14, align 4
    %27 = add nsw i32 %25, %26
    ret i32 %27
}

define external dso_local default i32 @main() #0 {
0:
    %1 = alloca i32, i32 1, align 4
    store i32 0, i32* %1, align 4
    %2 = call i32 @f(i32 1, i32 2, i32 3, i32 4, i32 5, i32 6, i32 7) 
    ret i32 %2
}

attributes #0 = { noinline nounwind optnone uwtable "correctly-rounded-divide-sqrt-fp-math"="false" "disable-tail-calls"="false" "frame-pointer"="all" "less-precise-fpmad"="false" "min-legal-vector-width"="0" "no-infs-fp-math"="false" "no-jump-tables"="false" "no-nans-fp-math"="false" "no-signed-zeros-fp-math"="false" "no-trapping-math"="false" "stack-protector-buffer-size"="8" "target-cpu"="x86-64" "target-features"="+fxsr,+mmx,+sse,+sse2,+x87" "unsafe-fp-math"="false" "use-soft-float"="false" }
!llvm.ident = !{!1}
!0 = !{i32 1, !"wchar_size", i32 4}
!llvm.module.flags = !{!0}
!1 = !{!"clang version 10.0.0-4ubuntu1 "}

