core/src/parser/assembly/snapshots/vicis_core__parser__assembly__module__parse_example_metadata.snap
---
source: core/src/parser/assembly/module.rs
assertion_line: 163
expression: module

---
source_filename = "ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"


define external dso_local default void @test(i32* nocapture %0) local_unnamed_addr #0 {
1:
    store i32 42, i32* %0, align 4, !tbaa !2
    ret void
}

attributes #0 = { nofree norecurse nounwind uwtable writeonly "correctly-rounded-divide-sqrt-fp-math"="false" "disable-tail-calls"="false" "frame-pointer"="none" "less-precise-fpmad"="false" "min-legal-vector-width"="0" "no-infs-fp-math"="false" "no-jump-tables"="false" "no-nans-fp-math"="false" "no-signed-zeros-fp-math"="false" "no-trapping-math"="false" "stack-protector-buffer-size"="8" "target-cpu"="x86-64" "target-features"="+cx8,+fxsr,+mmx,+sse,+sse2,+x87" "unsafe-fp-math"="false" "use-soft-float"="false" }
!llvm.ident = !{!1}
!0 = !{i32 1, !"wchar_size", i32 4}
!llvm.module.flags = !{!0}
!4 = !{!"omnipotent char", !5, i64 0}
!1 = !{!"clang version 10.0.0-4ubuntu1 "}
!2 = !{!3, !3, i64 0}
!5 = !{!"Simple C/C++ TBAA"}
!3 = !{!"int", !4, i64 0}

