core/src/parser/assembly/snapshots/vicis_core__parser__assembly__module__parse_example_node.snap
---
source: core/src/parser/assembly/module.rs
assertion_line: 164
expression: module

---
source_filename = "c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"

%struct._Node = type { i32, %struct._Node*, %struct._Node* }

define external dso_local default %struct._Node* @new_node(i32 %0) #0 {
1:
    %2 = alloca i32, i32 1, align 4
    %3 = alloca %struct._Node*, i32 1, align 8
    store i32 %0, i32* %2, align 4
    %4 = call noalias i8* @calloc(i64 1, i64 24) #2 
    %5 = bitcast i8* %4 to %struct._Node*
    store %struct._Node* %5, %struct._Node** %3, align 8
    %6 = load i32, i32* %2, align 4
    %7 = load %struct._Node*, %struct._Node** %3, align 8
    %8 = getelementptr inbounds %struct._Node, %struct._Node* %7, i32 0, i32 0
    store i32 %6, i32* %8, align 8
    %9 = load %struct._Node*, %struct._Node** %3, align 8
    ret %struct._Node* %9
}

declare external dso_local default noalias i8* @calloc(i64 %0, i64 %1) #1 

define external dso_local default i32 @main() #0 {
0:
    %1 = alloca i32, i32 1, align 4
    %2 = alloca i32, i32 1, align 4
    store i32 0, i32* %1, align 4
    store i32 0, i32* %2, align 4
    ret i32 0
}

attributes #0 = { noinline nounwind optnone uwtable "correctly-rounded-divide-sqrt-fp-math"="false" "disable-tail-calls"="false" "frame-pointer"="all" "less-precise-fpmad"="false" "min-legal-vector-width"="0" "no-infs-fp-math"="false" "no-jump-tables"="false" "no-nans-fp-math"="false" "no-signed-zeros-fp-math"="false" "no-trapping-math"="false" "stack-protector-buffer-size"="8" "target-cpu"="x86-64" "target-features"="+cx8,+fxsr,+mmx,+sse,+sse2,+x87" "unsafe-fp-math"="false" "use-soft-float"="false" }
attributes #1 = { nounwind "correctly-rounded-divide-sqrt-fp-math"="false" "disable-tail-calls"="false" "frame-pointer"="all" "less-precise-fpmad"="false" "no-infs-fp-math"="false" "no-nans-fp-math"="false" "no-signed-zeros-fp-math"="false" "no-trapping-math"="false" "stack-protector-buffer-size"="8" "target-cpu"="x86-64" "target-features"="+cx8,+fxsr,+mmx,+sse,+sse2,+x87" "unsafe-fp-math"="false" "use-soft-float"="false" }
attributes #2 = { nounwind }
!llvm.ident = !{!1}
!0 = !{i32 1, !"wchar_size", i32 4}
!llvm.module.flags = !{!0}
!1 = !{!"clang version 10.0.0-4ubuntu1 "}

