core/src/parser/assembly/snapshots/vicis_core__parser__assembly__module__parse_example_struct.snap
---
source: core/src/parser/assembly/module.rs
assertion_line: 173
expression: module

---
source_filename = "a.7rcbfp3g-cgu.0"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"

%e = type i64
%d = type { i8, %a }
%c = type { %c*, i8 }
%b = type { i32, { i32 } }
%"あいうえお" = type { i32 }
%a = type { i32, [123 x i64] }

define external dso_local default i32 @main() {
0:
    %1 = alloca %a, i32 1
    %2 = alloca %b, i32 1
    %3 = alloca %c, i32 1
    %4 = alloca %d, i32 1
    %5 = alloca i64, i32 1
    %6 = alloca %"あいうえお", i32 1
    ret i32 0
}


